# qsafe

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  Dockerfile  LICENSE  METRICS.md  PROJECT_AUDIT.md  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  VISION.md  docker-compose.yml
.github/workflows/: ci.yml  docs.yml
common/: Cargo.toml
common/src/: lib.rs
docs/: HSM_VERIFICATION_STATUS.md  HYBRID_KEY_EXCHANGE.md
docs/adr/: 0001-cargo-workspace-and-hsm-architecture.md  0002-centralized-configuration-loader.md  0003-static-secret-and-signature-type-unification.md  0004-disabling-test-harness-for-bare-metal-binaries.md  0005-database-migrations.md  0006-secure-authentication-and-error-handling.md  0007-hardware-interface-driver-and-simulation.md  0008-hybrid-crypto-standards-and-memory-zeroization.md  0009-async-websocket-registry-and-offline-queues.md  0010-observability-tracing-and-telemetry.md  0011-http-api-routing-and-authorization-middleware.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  api-reference.md  devlog.md  getting-started.md  hsm-verification-status.md  hybrid-key-exchange.md  introduction.md  metrics.md  research.md
docs/book/src/adr/: 0001.md  0002.md  0003.md  0004.md  0005.md  0006.md  0007.md  0008.md  0009.md  0010.md  0011.md  index.md
firmware/: Cargo.toml
firmware/src/: main.rs
host-server/: Cargo.toml
host-server/examples/: demo_client.rs
host-server/migrations/: 0001_init.sql  0002_offline_messages.sql  0003_message_indexes.sql  0004_drop_dead_session_fk.sql
host-server/src/: app.rs  auth.rs  config.rs  crypto.rs  database.rs  db_tests.rs  error.rs  handshake.rs  hardware.rs  lib.rs  main.rs  messaging.rs  qkd.rs  qrng.rs  scratch_governor.rs  ui.rs  websocket.rs
host-server/tests/: auth_flow.rs  hsm_mock_flow.rs  messages_and_contacts.rs
host-server/tests/common/: mod.rs
src/: crypto.rs  lib.rs  main.rs  messaging.rs  qkd.rs  qrng.rs  ui.rs
