[package]
name = "qsafe-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
# For QRNG simulation
rand_pcg = "0.3"
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
# Environment
dotenvy = "0.15"
# Auth
jsonwebtoken = "9.0"
bcrypt = "0.15"
# WebSockets
tokio-tungstenite = "0.21"
futures-util = "0.3"
# For web interface (optional)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
# For visualization (optional)
plotters = { version = "0.3", optional = true }

[features]
default = []
web = ["wasm-bindgen", "web-sys"]
visualization = ["plotters"]
