[package]
name = "qsafe-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
# For QRNG simulation
rand_pcg = "0.3"
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "request-id"] }
# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
# Environment
dotenvy = "0.15"
# Auth
jsonwebtoken = "9.0"
argon2 = "0.5"
thiserror = "1.0"
# WebSockets
tokio-tungstenite = "0.21"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.15"
base64 = "0.22"
tower_governor = "0.4"
# For web interface (optional)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
# For visualization (optional)
plotters = { version = "0.3", optional = true }
# PQC and hybrid crypto
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2.0"
orion = "0.16"
blake3 = "1"
hkdf = "0.12"
sha3 = "0.10"
rand_core = "0.6"
getrandom = "0.2"
zeroize = "1.5"
bincode = "1"
serialport = "4.3"
qsafe-common = { path = "../common" }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }

[features]
default = []
web = ["wasm-bindgen", "web-sys"]
visualization = ["plotters"]
